--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx",
-    "lint": "tsc"
+    "lint": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [
     "CFDE"
@@ -20,7 +22,15 @@
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.8",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-docs": "^9.0.4",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react-webpack5": "^9.0.4",
+    "storybook": "^9.0.4"
   }
 }
