--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "node script/update_dccs.ts && tsup src/index.tsx",
+    "build": "node script/update_dccs.ts && tsup src/index.tsx --format esm,cjs --dts",
     "lint": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
